Fixing Sonar issues, focusing mainly on sfcofl2.
Change-Id: I25f12a7b53c7873fdd3279864710813782279fb1
Signed-off-by: ebrjohn <brady.allen.johnson@ericsson.com>